fix: import data loader [working]

--- a/eda_biotech_datasets.ipynb
+++ b/eda_biotech_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "eda_biotech_datasets.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM2zW0wpTd1ssFRJK7pRevJ",
+      "authorship_tag": "ABX9TyNPy21LNQFj/9GXLK8SKAng",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,6 +92,21 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kldbg-8Pktq7"
+      },
+      "source": [
+        "%%capture\n",
+        "!wget https://raw.githubusercontent.com/AchrafAsh/gnn-receptive-fields/main/data.py\n",
+        "\n",
+        "from data import load_dataset\n",
+        "path = osp.join(os.getcwd(), 'data')"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "-kQMVErzhq-J"
@@ -101,19 +116,124 @@
         "\n",
         "Definition:\\\n",
         "Quantum chemical properties for a relevant, consistent, and comprehensive chemical space of small organic molecules.\\\n",
-        "This database may serve for the identification of structure-property relationships."
+        "This database may serve for the identification of structure-property relationships.\n",
+        "\n",
+        "Description:\n",
+        "- 130K molecules\n",
+        "- 19 continuous features to predict\n",
+        "\n",
+        "More info: https://pytorch-geometric.readthedocs.io/en/latest/modules/datasets.html#torch_geometric.datasets.QM9"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IjA6Zk3LivTc"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IjA6Zk3LivTc",
+        "outputId": "3a7f015d-45e0-4ad2-fa49-8b3589ee8fd2"
       },
       "source": [
         "qm9 = load_dataset(path, \"QM9\")"
       ],
-      "execution_count": null,
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading https://pytorch-geometric.com/datasets/qm9_v2.zip\n",
+            "Extracting /content/data/raw/qm9_v2.zip\n",
+            "Processing...\n",
+            "Using a pre-processed version of the dataset. Please install `rdkit` to alternatively process the raw data.\n",
+            "Done!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "crYUfj_Jlnrp",
+        "outputId": "6ce6a4a6-d8c0-404a-8c89-64aef617fdc1"
+      },
+      "source": [
+        "len(qm9)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "130831"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1CuZT0dulJv-"
+      },
+      "source": [
+        "first_molecule = qm9[10]"
+      ],
+      "execution_count": 22,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A523DA58laeg",
+        "outputId": "31612c5d-752b-49ac-810f-18d688b7bca7"
+      },
+      "source": [
+        "first_molecule.edge_attr"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1., 0., 0., 0.],\n",
+              "        [1., 0., 0., 0.],\n",
+              "        [1., 0., 0., 0.],\n",
+              "        [1., 0., 0., 0.],\n",
+              "        [1., 0., 0., 0.],\n",
+              "        [0., 1., 0., 0.],\n",
+              "        [1., 0., 0., 0.],\n",
+              "        [0., 1., 0., 0.],\n",
+              "        [1., 0., 0., 0.],\n",
+              "        [1., 0., 0., 0.],\n",
+              "        [1., 0., 0., 0.],\n",
+              "        [1., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "D2ZPKKGmlKWE"
+      },
+      "source": [
+        "## Enzymes"
+      ]
     },
     {
       "cell_type": "code",
@@ -125,6 +245,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_2fdZrTulNXp"
+      },
+      "source": [
+        "## Protein-Protein Interactions"
+      ]
     },
     {
       "cell_type": "code",
